# Vortex

./: ADIdiffusion.cpp  ADIdiffusion.h  ADIdiffusion_test.cpp  ADIdiffusion_test.h  CMakeLists.txt  MinMaxValues_firststep.txt  README.md  Report_ShoshanaJakobovits.tex  animation_test.py  comparison vectorization.numbers  comparison_vectorization.xlsx  datapoints.cpp  datapoints.h  datapoints_test.cpp  expansion.cpp  expansion.h  expansion_test.cpp  fields.cpp  fields.h  fields_test.cpp  fields_test.h  kernels.cpp  main.cpp  main.py  morton.cpp  morton.h  morton_test.cpp  morton_time.cpp  multipole.cpp  multipole.h  multipole_test.cpp  quadtree.cpp  quadtree.h  quadtree_test.R  quadtree_test.cpp  quadtree_time.cpp  simulation.cpp  simulation.h  solver.cpp  solver.h  (+2 more)
